Fixed the following Information Panel issues: * Trash icon is not updated when trash has been emptied or got filled. * When renaming an item the old name will be shown in the Information Panel. * When unmounting media, still the mounted icon is shown.

BUG: 161385
BUG: 153514
BUG: 154747
CCBUG: 159366

svn path=/trunk/KDE/kdebase/apps/; revision=818005